# EasyDoc

./: README.md  analyser.py  analyser.spec  analyser_doc.md  easydoc_doc.md  generator.py  main_doc.md  objects.py  parttern.md  pattern.md  pyproject.toml
EasyDocPy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
PyEasyDoc.egg-info/: PKG-INFO  SOURCES.txt
easydoc/: __init__.py  __main__.py  analyser.py  exceptions.py  generator.py  objects.py
easydoc/classes/: __init__.py  exceptions.py  parsed_objects.py  tree_objects.py
easydoc/config/: custom_comment_lines.json
easydoc/core/: FileParser.py  InteractiveManager.py  TreatmentManager.py  __init__.py
easydoc/core/utils/: __init__.py  const.py  function_utils.py
easydoc/generators/: HTMLGenerator.py  MarkdownGenerator.py  __init__.py
easydoc/main_manager/: ContextManager.py  FileParser.py  InteractiveManager.py  TreatmentManager.py  __init__.py
easydoc/templates/: template.md
