[project]
name = "PyEasyDoc"
version = "1.1.5"
description = "python documentation generator"
dependencies = []
authors = [{ name="epsilonkn" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
easydoc = "easydoc.cli:main"

[tool.setuptools.package-data]
"easydoc" = ["templates/*.md", "templates/*.html", "config/*.json"]

[project.urls]
Homepage = "https://github.com/epsilonkn/EasyDoc"
Issues = "https://github.com/epsilonkn/EasyDoc/issues"